# mirea-events-bot-max

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pytest.ini  requirements-dev.txt
.github/workflows/: pr-check.yml  qa.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  db_init.py  main.py  models.py  scheduler.py
backend/app/admin/: __init__.py  auth.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  audit.py  auth.py  broadcasts.py  events.py  health.py  integration.py  organizers.py  registrations.py  scan.py  slots.py  stats.py
backend/app/bot/: __init__.py  client.py  dispatcher.py  handlers.py  instance.py  keyboards.py  notifications.py  texts.py
backend/app/cli/: __init__.py  init_project.py  seed_demo_events.py
backend/app/core/: __init__.py  formatting.py  rate_limit.py  security_headers.py
backend/app/landing/: __init__.py  routes.py
backend/app/landing/templates/: landing.html
backend/app/schemas/: __init__.py  audit.py  auth.py  broadcast.py  common.py  event.py  integration.py  organizer.py  registration.py  scan.py  slot.py  stats.py
backend/app/services/: __init__.py  audit.py  broadcast.py  consent.py  ics.py  integration.py  poster.py  qr.py  registration.py  scan.py  slots.py  stats.py
docs/: 01-overview.md  02-architecture.md  03-data-model.md  04-bot-scenarios.md  05-api.md  05-tz-diff.md  06-admin-panel.md  07-deployment.md  08-development.md  09-faq.md  10-compliance.md  README.md
docs/diagrams/: admin_and_edge_cases.puml  edge_cases_extended.puml  organizer_user_flows.puml  student_user_flows.puml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: index.css  main.tsx  (+1 more)
testing-framework/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
testing-framework/config/: credentials.py  settings.py  urls.py
testing-framework/core/: __init__.py  api_client.py  artifacts.py  auth_helper.py  exceptions.py  logger.py  spa_auth.py
testing-framework/docs/: architecture.md  best-practices.md  test-cases.md
testing-framework/factories/: __init__.py  event_factory.py  integration_event_factory.py  registration_factory.py  user_factory.py
testing-framework/fixtures/: api_fixtures.py  auth_fixtures.py  data_fixtures.py  mirea_fixtures.py  sut_fixtures.py  ui_fixtures.py
testing-framework/pages/: __init__.py  base_page.py  dashboard_page.py  event_detail_page.py  event_form_page.py  events_list_page.py  login_page.py  organizers_page.py  scanner_page.py  slots_page.py
testing-framework/pages/components/: __init__.py  csrf_form.py  flash_message.py  nav_bar.py
testing-framework/steps/api/: auth_steps.py  broadcast_steps.py  event_steps.py  integration_steps.py  registration_steps.py  scan_steps.py  stats_steps.py
testing-framework/steps/ui/: auth_steps.py  event_steps.py
testing-framework/tests/api/audit/: test_audit_pos.py
testing-framework/tests/api/auth/: test_login_neg.py  test_login_pos.py
testing-framework/tests/api/broadcasts/: test_broadcasts_neg.py  test_broadcasts_pos.py
testing-framework/tests/api/events/: test_event_status_neg.py  test_event_status_pos.py  test_events_crud_neg.py  test_events_crud_pos.py  test_events_filters_mirea_pos.py  test_events_filters_neg.py  test_events_filters_pos.py  test_events_put_method.py
testing-framework/tests/api/health/: test_health_neg.py  test_health_pos.py
testing-framework/tests/api/integration/: test_integration_health.py  test_integration_sync_neg.py  test_integration_sync_pos.py
testing-framework/tests/api/organizers/: test_organizers_pos.py
testing-framework/tests/api/registrations/: test_reg_edge_cases.py  test_registrations_neg.py  test_registrations_pos.py
testing-framework/tests/api/scan/: test_scan_edge_cases.py  test_scan_neg.py  test_scan_pos.py
testing-framework/tests/api/security/: test_jwt_tampering.py  test_pii_leak.py  test_security_headers.py
testing-framework/tests/api/slots/: test_slots_pos.py
testing-framework/tests/api/stats/: test_stats_neg.py  test_stats_pos.py
testing-framework/tests/e2e/: test_mirea_real_data_flow.py  test_organizer_full_flow.py
testing-framework/tests/integration/: test_api_creates_ui_shows.py
testing-framework/tests/ui/auth/: test_login_neg.py  test_login_pos.py  test_logout.py
testing-framework/tests/ui/dashboard/: test_dashboard_neg.py  test_dashboard_pos.py
testing-framework/tests/ui/events/: test_broadcast.py  test_event_crud_neg.py  test_event_crud_pos.py  test_event_detail_pos.py  test_event_slots_pos.py  test_events_list.py  test_export.py
testing-framework/tests/ui/organizers/: test_organizers_neg.py  test_organizers_pos.py
testing-framework/tests/ui/scanner/: test_scanner_neg.py  test_scanner_pos.py
testing-framework/tests/unit/: __init__.py  conftest.py  test_api_ownership.py  test_audit.py  test_auth.py  test_bot_client.py  test_bot_handlers.py  test_bot_handlers_views.py  test_bug_report.py  test_cancel_by_organizer.py  test_close_registration.py  test_consent.py  test_formatting.py  test_ics_qr.py  test_keyboards.py  test_late_cancel.py  test_main_and_dispatcher.py  test_notification_edge_cases.py  test_notifications.py  test_poster_unit.py  test_property_event_dates.py  test_registration.py  test_registration_code.py  test_regressions_final.py  test_scan_max_entries.py  test_security.py  test_slot_idor.py  test_slots.py  test_timings.py  test_utils_assertions.py  test_utils_schema_check.py  test_utils_time_diff.py  test_utils_wait_retry.py  test_waitlist_edge_cases.py
testing-framework/tests/unit/fakes/: max_client.py
testing-framework/tests/unit/integration/: conftest.py  test_integration_sync.py  test_rest_api.py
testing-framework/utils/: __init__.py  allure_helpers.py  assertions.py  bug_report.py  db_snapshot.py  diff.py  retry.py  schema_check.py  sut_db_helpers.py  test_helpers.py  time_helpers.py  timings.py  wait_for.py
(+30 files in other folders)
