[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mirea-events-bot-qa"
version = "1.0.0"
description = "Black-box QA framework for mirea-events-bot"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["../backend"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers --strict-config --tb=short"
markers = [
    "smoke: критический минимум (< 30 сек суммарно)",
    "regression: расширенное покрытие",
    "unit: in-memory white-box тесты (моки БД, SUT не нужен)",
    "api: REST API тесты (httpx, требуется живой SUT)",
    "ui: React SPA тесты (Playwright, требуется живой SUT + frontend/dist)",
    "integration: API + UI или /api/v1/integration/*",
    "e2e: сквозные пользовательские сценарии",
    "pos: положительный сценарий",
    "neg: негативный сценарий",
    "negative: alias для neg — отрицательные пути (для совместимости c CI)",
    "slow: > 5 секунд или зависит от rate-limit",
    "serial: нельзя гонять параллельно (общий seed)",
    "security: проверки доступа, JWT, CSRF, IDOR",
    "edge: граничные сценарии из docs/diagrams/*.puml",
]
log_cli = false
log_cli_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    # utcnow в unit-тестах (исторический стиль) и в backend/app при импорте create_token
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["reports", "data", ".venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"conftest.py" = ["F401", "F403"]
"**/conftest.py" = ["F401", "F403"]
# Unit-тесты перенесены из mirea-events-bot/tests/ — у них свой исторический стиль
# (порядок импортов, E402 после `os.environ.setdefault` ДО `import app.*`).
# Переписывать смысла нет, тесты работают.
"tests/unit/**" = ["E402", "E501", "I001", "RUF100"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
# Unit-тесты — белый ящик mirea-events-bot, типизированы как в исходном проекте
# (свободно). Отдельный mypy-прогон в основном проекте их покрывает.
exclude = ["reports/", "data/", ".venv/", "tests/unit/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
